<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background"
    tools:context=".AddTaskActivity">

    <ImageView
        android:id="@+id/logoHeader"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo_rectangle"
        android:padding="23dp"
        android:src="@drawable/task"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name"
        tools:ignore="MissingConstraints" />
    <!-- Title TextView -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_title"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Task Name Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:hint="@string/task_name_hint"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextAppearance="@style/CustomHintTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/colorTextSecondary"
            android:padding="16dp"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Task Description Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/task_description_hint"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidthFocused="2dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextAppearance="@style/CustomHintTextAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/colorTextSecondary"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="16dp"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        app:backgroundTint="@color/colorSecondary"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
