<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"> <!-- Dark background -->


    <!-- Logo with Rectangle -->
    <ImageView
        android:id="@+id/logoHeader"
        android:layout_width="1000dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/logo_rectangle"
        android:layout_marginStart="0dp"
        android:padding="23dp"
        android:src="@drawable/task"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name" />


    <!-- Header Text next to the logo -->
    <!-- Search bar -->

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/logoHeader"
        android:layout_marginStart="-271dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="-32dp"
        android:layout_toEndOf="@id/logoHeader"
        android:text="@string/upcoming_tasks"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/search_background"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:padding="12dp"
        android:textColor="@color/colorTextSecondary"
        android:textColorHint="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/tabLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/search_bar"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp">


    </LinearLayout>

    <!-- RecyclerView for displaying tasks -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tabLayout"
        android:layout_above="@id/bottomNav"
        android:layout_margin="16dp"
        android:clipToPadding="false"
        android:layout_marginBottom="64dp"/>

    <!-- Floating Action Button for adding tasks -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_add_task"
        app:backgroundTint="@color/colorSecondary"
        app:fabSize="normal"
        tools:ignore="RelativeOverlap" />

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/bottom_nav_item_colors"
        app:itemTextColor="@color/bottom_nav_item_colors"
        app:menu="@menu/bottom_nav_menu"
        style="@style/CustomBottomNavigationViewStyle"/>


</RelativeLayout>
