<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@drawable/background">

    <!-- Fixed Logo with Rectangle -->
    <ImageView
        android:id="@+id/logoHeader"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo_rectangle"
        android:padding="23dp"
        android:src="@drawable/task"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name" />

    <!-- NestedScrollView to make the rest of the content scrollable -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logoHeader"
        android:layout_above="@id/bottomNav">

        <!-- LinearLayout inside NestedScrollView -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Header Text -->
            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminders"
                android:textSize="24sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp" />

            <!-- Calendar View -->
            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:layout_marginBottom="16dp" />

            <!-- Time Picker -->
            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:background="@color/colorSecondary" />

            <!-- Reminder Text Input -->
            <EditText
                android:id="@+id/reminderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter reminder text"
                android:inputType="text"
                android:padding="20dp"
                android:background="@color/colorSecondary"
                android:layout_marginTop="50dp" /> <!-- Adjusted margin -->

            <!-- Set Reminder Button -->
            <Button
                android:id="@+id/setReminderButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorbutton"
                android:text="@string/set_remin" />

            <!-- Reminder List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reminderRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Navigation View -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/bottom_nav_item_colors"
        app:itemTextColor="@color/bottom_nav_item_colors"
        app:menu="@menu/bottom_nav_menu"
        style="@style/CustomBottomNavigationViewStyle"/>

</RelativeLayout>
